# ollama-gemma-agents-mcp-skills

./: .env  .gitignore  FLOW.md  LAYMAN_GUIDE.md  README.md  agent.py  app.py  index.html  logger.py  pyproject.toml  requirements.txt  start.sh  stop.sh
.obsidian/: graph.json  workspace.json
logs/: .gitkeep
mcp_servers/party/: __init__.py  mcp_server_party.py
mcp_servers/party/tools/: __init__.py  budget_expenses.py  hire_entertainment.py  order_cake.py
mcp_servers/travel/: mcp_server_travel.py
mcp_servers/travel/skills/: full_vacation_planner.json  stay_local_services.json
mcp_servers/travel/tools/: search_hotels.py
old/: app.py  index.html  requirements.txt  start.sh  stop.sh
old/mcp_servers/party/skills/: core_event_planning.json  invitation_budget.json  logistics_theme.json
old/mcp_servers/party/tools/: book_venue.py  buy_decorations.py  invite_guests.py  send_reminders.py
old/mcp_servers/travel/: __init__.py
old/mcp_servers/travel/skills/: quick_flight_booking.json
old/mcp_servers/travel/tools/: __init__.py  book_attraction.py  book_flight.py  book_hotel.py  generate_travel_itinerary.py  rent_car.py  search_flights.py
old/tests/: test_handlers.py
skills/pirate-speak/: SKILL.md
src/mcp_skills/: __init__.py  cli.py  config.py
src/mcp_skills/agent/: __init__.py  agent.py  mcp_client.py  prompts.py
src/mcp_skills/llm/: __init__.py  base.py  dummy.py  openai_client.py
src/mcp_skills/server/: __init__.py  __main__.py  app.py
tests/: test_agent.py  test_cli.py  test_config.py  test_llm.py  test_mcp.py  test_skills.py  test_tools.py
(+7 files in other folders)
