[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-skills"
version = "0.1.0"
description = "A demonstration of agent skills over Model Context Protocol (MCP)"
readme = "FLOW.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "mcp>=0.1.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[project.scripts]
mcp-skills = "mcp_skills.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_skills"]
